--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meraki</title>
+    <title>Week02-ThreeJS</title>
   </head>
   <body class="body home">
     <canvas id="c"></canvas>
     <p class="fps">FPS: 0</p>
+
   </body>
 </html>
