Update to samples

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,23 @@
     <title>Week02-ThreeJS</title>
   </head>
   <body class="body home">
-    <canvas id="c"></canvas>
+    <canvas class="c"></canvas>
     <p class="fps">FPS: 0</p>
 
+  <div class="samples">
+    <p>Samples:</p>
+
+    <select class="samples__select">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="30">30</option>
+      <option value="120">120</option>
+    </select>
+  </div>
   </body>
 </html>
