Update to lightning, motion,...

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
     <p class="fps">FPS: 0</p>
 
   <div class="samples">
-    <p>Samples:</p>
+    <p>Samples: </p>
 
     <select class="samples__select">
+      <option value="1">Don't go above 3 on laptop</option>
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
